add all sections

--- a/app/index.html
+++ b/app/index.html
@@ -167,10 +167,249 @@
         <img src="images/favorite/favorite-bg.jpg" alt="favorite-img">
       </div>
     </div>
-
+    <div class="container">
+      <div class="favorites__info">
+        <h3 class="favorites__title title-all">Seasons Change. Your Shoes Don’t Have To.</h3>
+        <p class="favorites__title text-all">Soft and cozy wool shoes to keep you comfortable all year round.</p>
+        <div class="header__buttons">
+          <a href="#" class="header__btn favor_btn">Shop Men</a>
+          <a href="#" class="header__btn favor_btn">Shop Women</a>
+        </div>
+      </div>
+    </div>
 
     </div>
   </section>
+  <!-- slider collection -->
+  <section class="slider__collection">
+    <div class="container">
+      <h3 class="slider__collection-title">Shop The Collections</h3>
+      <div class="slider__collection-items">
+
+
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-1.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">New Arrivals</h6>
+          <p class="slider__collection-item-text">The latest styles and limited edition colors that you can only find
+            here (while they last, that is).</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-2.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">Natural Run Collection</h6>
+          <p class="slider__collection-item-text">Looking for more sustainable ways to break a sweat? We’ve got you
+            covered from head to toe.</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-3.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">Fresh Long Sleeve Tee Colors</h6>
+          <p class="slider__collection-item-text">It’s crisp, clean and ready for wherever the day takes you..</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-1.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">New Arrivals</h6>
+          <p class="slider__collection-item-text">The latest styles and limited edition colors that you can only find
+            here (while they last, that is).</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-2.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">Natural Run Collection</h6>
+          <p class="slider__collection-item-text">Looking for more sustainable ways to break a sweat? We’ve got you
+            covered from head to toe.</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-3.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">Fresh Long Sleeve Tee Colors</h6>
+          <p class="slider__collection-item-text">It’s crisp, clean and ready for wherever the day takes you..</p>
+        </div>
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-1.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">New Arrivals</h6>
+          <p class="slider__collection-item-text">The latest styles and limited edition colors that you can only find
+            here (while they last, that is).</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-2.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">Natural Run Collection</h6>
+          <p class="slider__collection-item-text">Looking for more sustainable ways to break a sweat? We’ve got you
+            covered from head to toe.</p>
+        </div>
+
+        <div class="slider__collection-item">
+          <a href="#" class="slider__collection-link"><img src="images/collectionslider/slider-item-3.jpg"
+              alt="slider"></a>
+          <h6 class="slider__collection-item-title">Fresh Long Sleeve Tee Colors</h6>
+          <p class="slider__collection-item-text">It’s crisp, clean and ready for wherever the day takes you..</p>
+        </div>
+
+
+
+      </div>
+
+    </div>
+    <div class="slider__collection-box">
+      <div class="container-fluid">
+        <img src="images/collectionslider/collection-bg.jpg" alt="img">
+      </div>
+      <div class="container">
+        <div class="slider__collection-info">
+          <h5 class="slider__collection-infotitle">Made From Nature, For Nature</h5>
+          <p class="slider__collection-infotext">We craft with planet-friendly natural materials, like merino wool and
+            eucalyptus trees, because they're our best chance for a sustainable future.</p>
+          <a href="" class="slider__collection-infolink">see now</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- arrivals slider -->
+
+  <section class="slider__arrivals">
+    <div class="container">
+      <h3 class="slider__arrivals-title">New Arrivals</h3>
+      <div class="slider__arrivals-items">
+
+
+
+        <div class="slider__arrivals-item">
+          <a href="#" class="slider__arrivals-link"><img src="images/arrivals/arrivals-item-1.png" alt="slider"></a>
+          <h6 class="slider__arrivals-item-title">Men's Trail Runner SWT</h6>
+          <p class="slider__arrivals-item-text">Classic Color, Natural Black</p>
+        </div>
+
+        <div class="slider__arrivals-item">
+          <a href="#" class="slider__arrivals-link"><img src="images/arrivals/arrivals-item-2.png" alt="slider"></a>
+          <h6 class="slider__arrivals-item-title">Women's Trail Runner SWT</h6>
+          <p class="slider__arrivals-item-text">Classic Color, Natural White</p>
+        </div>
+
+        <div class="slider__arrivals-item">
+          <a href="#" class="slider__arrivals-link"><img src="images/arrivals/arrivals-item-3.png" alt="slider"></a>
+          <h6 class="slider__arrivals-item-title">Men's Trail Runner SWT</h6>
+          <p class="slider__arrivals-item-text">Classic Color, Natural Black</p>
+        </div>
+
+        <div class="slider__arrivals-item">
+          <a href="#" class="slider__arrivals-link"><img src="images/arrivals/arrivals-item-1.png" alt="slider"></a>
+          <h6 class="slider__arrivals-item-title">Men's Trail Runner SWT</h6>
+          <p class="slider__arrivals-item-text">Classic Color, Natural Black</p>
+        </div>
+
+        <div class="slider__arrivals-item">
+          <a href="#" class="slider__arrivals-link"><img src="images/arrivals/arrivals-item-2.png" alt="slider"></a>
+          <h6 class="slider__arrivals-item-title">Women's Trail Runner SWT</h6>
+          <p class="slider__arrivals-item-text">Classic Color, Natural White</p>
+        </div>
+
+        <div class="slider__arrivals-item">
+          <a href="#" class="slider__arrivals-link"><img src="images/arrivals/arrivals-item-3.png" alt="slider"></a>
+          <h6 class="slider__arrivals-item-title">Men's Trail Runner SWT</h6>
+          <p class="slider__arrivals-item-text">Classic Color, Natural Black</p>
+        </div>
+
+      </div>
+      <div class="slider__arrivals-box">
+        <div class="container-fluid">
+          <img src="images/arrivals/arrivals-bg.jpg" alt="img">
+        </div>
+        <div class="container">
+          <div class="slider__arrivals-info">
+            <h5 class="slider__arrivals-infotitle">Reversing Climate Change Through Better Business</h5>
+            <p class="slider__arrivals-infotext">Reducing our environmental impact has been a top priority since day
+              one. But now, we’re taking things further. Explore our overall sustainability approach, our progress thus
+              far, and our bold list of commitments for 2025.</p>
+            <a href="" class="slider__arrivals-infolink">Our Sustainable Practices</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- section stories  -->
+  <section class="slider__stories">
+    <div class="container">
+      <h3 class="slider__stories-title">Stories</h3>
+      <div class="slider__stories-items">
+
+
+
+        <div class="slider__stories-item">
+          <a href="#" class="slider__stories-link"><img src="images/stories/stories-item-1.jpg" alt="slider"></a>
+          <h6 class="slider__stories-item-title">Planet-Friendly Activewear</h6>
+          <p class="slider__stories-item-text">The Natural Run Collection is made with sustainable materials that can
+            stand up to your toughest workout.</p>
+        </div>
+
+        <div class="slider__stories-item">
+          <a href="#" class="slider__stories-link"><img src="images/stories/stories-item-2.jpg" alt="slider"></a>
+          <h6 class="slider__stories-item-title">Planet-Friendly Activewear</h6>
+          <p class="slider__stories-item-text">The Natural Run Collection is made with sustainable materials that can
+            stand up to your toughest workout.</p>
+        </div>
+
+        <div class="slider__stories-item">
+          <a href="#" class="slider__stories-link"><img src="images/stories/stories-item-3.jpg" alt="slider"></a>
+          <h6 class="slider__stories-item-title">Planet-Friendly Activewear</h6>
+          <p class="slider__stories-item-text">The Natural Run Collection is made with sustainable materials that can
+            stand up to your toughest workout.</p>
+        </div>
+
+        <div class="slider__stories-item">
+          <a href="#" class="slider__stories-link"><img src="images/stories/stories-item-1.jpg" alt="slider"></a>
+          <h6 class="slider__stories-item-title">Planet-Friendly Activewear</h6>
+          <p class="slider__stories-item-text">The Natural Run Collection is made with sustainable materials that can
+            stand up to your toughest workout.</p>
+        </div>
+
+        <div class="slider__stories-item">
+          <a href="#" class="slider__stories-link"><img src="images/stories/stories-item-2.jpg" alt="slider"></a>
+          <h6 class="slider__stories-item-title">Planet-Friendly Activewear</h6>
+          <p class="slider__stories-item-text">The Natural Run Collection is made with sustainable materials that can
+            stand up to your toughest workout.</p>
+        </div>
+
+        <div class="slider__stories-item">
+          <a href="#" class="slider__stories-link"><img src="images/stories/stories-item-3.jpg" alt="slider"></a>
+          <h6 class="slider__stories-item-title">Planet-Friendly Activewear</h6>
+          <p class="slider__stories-item-text">The Natural Run Collection is made with sustainable materials that can
+            stand up to your toughest workout.</p>
+        </div>
+
+      </div>
+      <div class="slider__stories-box">
+        <div class="container">
+          <div class="slider__stories-info">
+            <h5 class="slider__stories-infotitle">Want First Dibs?</h5>
+            <p class="slider__stories-infotext">Join our email list and be the first to know about new limited edition
+              products, material innovations, and lots of other fun updates.</p>
+
+            <form class="stories__form ">
+              <input class="stories__input" type="text" placeholder="Enter Your Email Address">
+              <button class="stories__input-btn" type="submit">sing in</button>
+            </form>
+            <p class="privaci">Privacy Policy</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <script src="js/main.min.js"></script>
 </body>
