--- a/app/index.html
+++ b/app/index.html
@@ -13,17 +13,24 @@
   <header class="header">
     <div class="container">
       <div class="header__top">
+        <div class="logo">
+          <a href="#" class="logo__img"><img src="images/logo.svg" alt="logo"></a>
+        </div>
+        <div class="burger__btn">
+          <div class="burger__lin-1"></div>
+          <div class="burger__lin-2"></div>
+          <div class="burger__lin-3"></div>
+        </div>
+
         <nav class="nav">
           <div class="menu__list">
             <a href="#" class="menu__item">Men</a>
             <a href="#" class="menu__item">Women</a>
             <a href="#" class="menu__item">New Arrivals</a>
           </div>
-        </nav>
-        <div class="logo">
-          <a href="#" class="logo__img"><img src="images/logo.svg" alt="logo"></a>
-        </div>
-        <nav class="nav">
+
+
+
           <div class="menu__list">
             <a href="#" class="menu__item">Sustainability</a>
             <a href="#" class="menu__item">Stores</a>
@@ -50,6 +57,7 @@
       </div>
     </div>
   </header>
+
   <section class="favorites">
     <div class="container">
       <h2 class="main__title">Our Favorites</h2>
@@ -408,7 +416,78 @@
       </div>
     </div>
   </section>
+  <!-- footer -->
+  <footer class="footer">
+    <div class="container-fluid">
+      <footer class="footer__inner">
+        <ul class="footer__inner-list">
+          <li class="footer__inner-itemtitle"> Help</li>
+          <li class="footer__inner-item">
 
+            <a href="tel:18142519966" class="footer__inner-link">
+              1-888-963-8944
+
+            </a></li>
+          <li class="footer__inner-item">
+
+            <a href="tel:18142519966" class="footer__inner-link">
+              1-814-251-9966
+
+            </a></li>
+          <li class="footer__inner-item">
+
+            <a href="mailto:help@allbirds.com" class="footer__inner-link">
+              help@allbirds.com
+
+            </a></li>
+        </ul>
+
+        <ul class="footer__inner-list">
+          <li class="footer__inner-itemtitle"> Shop</li>
+          <li class="footer__inner-item">
+
+            <a href="#" class="footer__inner-link">
+              Men's Shoes
+
+            </a></li>
+          <li class="footer__inner-item">
+
+            <a href="#" class="footer__inner-link">
+              Women's Shoes
+
+            </a></li>
+          <li class="footer__inner-item">
+
+            <a href="#" class="footer__inner-link">
+              Men's Apparel
+
+            </a></li>
+        </ul>
+
+        <ul class="footer__inner-list">
+          <li class="footer__inner-itemtitle"> Company</li>
+          <li class="footer__inner-item">
+
+            <a href="#" class="footer__inner-link">
+              Our Stores
+
+            </a></li>
+          <li class="footer__inner-item">
+
+            <a href="#" class="footer__inner-link">
+              Our Materials
+
+            </a></li>
+          <li class="footer__inner-item">
+
+            <a href="#" class="footer__inner-link">
+              Partnerships
+
+            </a></li>
+        </ul>
+      </footer>
+    </div>
+  </footer>
 
 
   <script src="js/main.min.js"></script>
